# edm

./: .gitignore  README.md  pyproject.toml
edm/: db.sqlite3  manage.py
edm/core/: models.py  tests.py
edm/core/context_processors/: year.py
edm/core/templatetags/: user_filters.py
edm/data/: Lotus_to_JSON.py  detail.json
edm/data/From_Lotus/: Lotus_Detail.txt  Lotus_Org.txt
edm/documents/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
edm/documents/migrations/: 0001_initial.py  0002_alter_detail_options_alter_given_options_and_more.py  0003_alter_document_date_input_doc_and_more.py
edm/edm/: asgi.py  settings.py  urls.py  wsgi.py
edm/fixtures/: implementers.json  organization.json  theme.json
edm/fixtures/From_Lotus/: Lotus_Implementers.txt  Lotus_Theme.txt
edm/templates/: base.html
edm/templates/documents/: create_document.html  document_detail.html  index.html
edm/templates/documents/includes/: detail_row.html  document_button.html  filters.html  paginator.html  post_comments.html  show_document(backup).html  show_document.html  switcher.html
edm/templates/includes/: field_form.html  footer.html  form_errors.html  header.html
edm/templates/posts/: create_post.html  follow.html  group_list.html  index.html  profile.html
edm/templates/users/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
edm/users/: tests.py  urls.py  views.py
(+3 files in other folders)
